--- a/src/app.css
+++ b/src/app.css
@@ -4,22 +4,26 @@
 
 @layer components {
 
-    .sidebar-icon {
+    /*.sidebar-icon {
         @apply relative flex items-center justify-center 
                h-12 w-12 mt-2 mb-2 mx-auto
                hover:bg-white
                rounded-3xl hover:rounded-xl
                transition-all duration-300 ease-linear
                cursor-pointer;
-    }
+    }*/
 
-    .sidebar-tooltip {
-        @apply absolute w-auto p-2 m-2 min-w-max left-14
-        rounded-md shadow-md
-        text-white bg-amber-700
-        text-xs font-bold
-        transition-all duration-100 scale-0 origin-left;
-      }
+  .sidebar-tooltip {
+      @apply absolute w-auto px-3 py-2 min-w-max -bottom-[2.8rem]
+      rounded-full shadow-sm
+      text-gray-900 bg-white
+      text-xs font-bold
+      transition-all duration-200 scale-0 origin-center;
+  }
+  
+  .default-bg {
+    @apply bg-no-repeat bg-cover bg-center;
+  }
 
 }
 
@@ -43,9 +47,36 @@
     html {
       font-family: Varella;
       cursor: default;
-    }
-    
-    button, a, img {
       -webkit-tap-highlight-color: transparent;
+      user-select: none;
     }
+
+    .d100 {
+      filter: invert(89%) sepia(28%) saturate(236%) hue-rotate(323deg) brightness(105%) contrast(104%);
+    }
+
+    .d200 {
+      filter: invert(90%) sepia(22%) saturate(473%) hue-rotate(320deg) brightness(108%) contrast(101%);
+    }
+
+    .d300 {
+      filter: invert(86%) sepia(27%) saturate(866%) hue-rotate(338deg) brightness(101%) contrast(96%);
+    }
+
+    .d400 {
+      filter: invert(94%) sepia(9%) saturate(7111%) hue-rotate(331deg) brightness(99%) contrast(99%);
+    }
+
+    .d500 {
+      filter: invert(33%) sepia(85%) saturate(404%) hue-rotate(3deg) brightness(97%) contrast(89%);
+    }
+
+    .a600 {
+      filter: invert(55%) sepia(10%) saturate(6606%) hue-rotate(322deg) brightness(93%) contrast(69%);
+    }
+
+    .a700 {
+      filter: invert(68%) sepia(99%) saturate(6806%) hue-rotate(24deg) brightness(92%) contrast(93%);
+    }
+
   }
