Initialized redesign in feed page

--- a/src/app.css
+++ b/src/app.css
@@ -49,6 +49,9 @@
       cursor: default;
       -webkit-tap-highlight-color: transparent;
       user-select: none;
+      overflow-x: hidden;
+      overflow-y: scroll;
+      background: #FFF7E7;
     }
 
     .d100 {
